# matrix

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  Taskfile.yml  monitor_tank.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.planning/: SPEC-REVIEW.md  phase-1-SPEC-DESIGN.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs
crates/core/src/agent/: claude_runner.rs  mod.rs  pool.rs
crates/core/src/checkpoint/: bypass.rs  manager.rs  mod.rs  review.rs
crates/core/src/detector/: mod.rs  project.rs  test_runner.rs
crates/core/src/executor/: mod.rs  task_executor.rs
crates/core/src/memory/: global.rs  mod.rs  task_memory.rs
crates/core/src/models/: manifest.rs  mod.rs  question.rs  task.rs
crates/core/src/orchestrator/: dependency_graph.rs  health_monitor.rs  mod.rs  orchestrator.rs  prompts.rs  task_scheduler.rs
crates/core/src/store/: mod.rs  question_store.rs  task_store.rs
crates/core/src/tui/: app.rs  event.rs  markdown.rs  mod.rs  render.rs  terminal.rs  tests.rs  topology.rs  tracing_layer.rs
crates/core/src/tui/components/: logs.rs  mod.rs  output.rs  questions.rs  status.rs  tabs.rs  tasks.rs
docs/: longtime.py  require1.0.md
docs/superpowers/plans/: 2026-03-16-matrix-implementation.md  2026-03-17-cli-tui-implementation.md  2026-03-21-agent-interactive-qa.md  2026-03-21-enhanced-status-display.md  2026-03-21-grouped-log-format.md  2026-03-23-task-scheduling-simplification.md
docs/superpowers/specs/: 2026-03-16-matrix-rust-design.md  2026-03-17-cli-tui-design.md  2026-03-21-agent-interactive-qa-design.md  2026-03-21-checkpoint-memory-design.md  2026-03-21-enhanced-status-display-design.md  2026-03-21-grouped-log-format-design.md  2026-03-23-task-scheduling-simplification-design.md
my-test/: .gitignore
test_tui/: .gitignore  Cargo.toml  ROADMAP.md
workspace/: .gitignore  Cargo.toml  README.md
workspace/src/: main.rs
