[workspace]
members = [
    "crates/core",
    "crates/cli",
    "workspace",
]
resolver = "2"

[workspace.package]
version = "0.1.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/bigfish1913/matrix"
authors = ["bigfish1913"]
description = "Long-Running Agent Orchestrator using Claude CLI"
readme = "README.md"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
thiserror = "1"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1"

# 文件遍历
walkdir = "2"

# 临时目录
tempfile = "3"

# 内部 crate
matrix-core = { path = "crates/core" }

# 依赖检查
which = "6"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
async-stream = "0.3"

# Markdown parsing
pulldown-cmark = "0.9"

# Bevy optimization profiles
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = true