[package]
name = "matrix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Matrix Agent Orchestrator"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
regex.workspace = true
walkdir.workspace = true
tempfile.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
async-stream.workspace = true

[dev-dependencies]
tokio-test = "0.4"